# agentskills

./: .gitignore  Cargo.toml  LICENSE  README.md
.agents/: .skill-lock.json
.github/workflows/: ci.yml  release.yml
src/: cli.rs  console.rs  main.rs  models.rs
src/commands/: add.rs  find.rs  init.rs  list.rs  mod.rs  remove.rs  update.rs
src/core/: agents.rs  config.rs  git.rs  hash.rs  installer.rs  lockfile.rs  mod.rs  source_parser.rs
tests/: integration.rs
