[package]
name = "agentskills"
version = "0.1.2"
edition = "2024"
description = "Agent skills package manager — install, manage, and discover AI agent skills from GitHub."
license = "Apache-2.0"
authors = ["kayaman"]
keywords = ["ai", "agent", "skills", "cli", "claude"]
repository = "https://github.com/kayaman/agentskills"

[[bin]]
name = "agentskills"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "3"
comfy-table = "7"
dialoguer = "0.11"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
ureq = { version = "3", features = ["json"] }
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
